<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_image"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/dm_sans_bold"
                android:textFontWeight="700"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job"
                android:textColor="@color/darkGray"
                android:textSize="12sp"
                android:fontFamily="@font/dm_sans_medium"
                android:textFontWeight="500"
                android:layout_marginTop="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_round_place_24"
                android:drawablePadding="4dp"
                android:text="@string/location"
                android:textColor="@color/location"
                android:textSize="13sp"
                android:fontFamily="@font/dm_sans_reg"
                android:textFontWeight="400"
                android:layout_marginTop="8dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/dm_sans_reg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:textFontWeight="500"
                    android:drawableEnd="@drawable/ic_baseline_star_rate_24"
                    android:drawablePadding="4dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:layout_gravity="end"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@drawable/text_background"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="@font/dm_sans_reg"
                android:textFontWeight="400"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:textColor="@color/darkGray"
                android:fontFamily="@font/dm_sans_medium"
                android:textFontWeight="500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:layout_gravity="end"
                android:layout_marginTop="9dp"
                android:textSize="12sp"
                android:textColor="@color/lightGray"
                android:fontFamily="@font/dm_sans_reg"
                android:textFontWeight="400"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>